--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "plotly>=5.24.1",
     "streamlit-aggrid>=1.0.5",
     "pyyaml>=6.0.2",
+    "mt-940>=4.30.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
@@ -34,8 +35,8 @@ allow-direct-references = true
 packages = ["transaction_services"]
 
 [project.scripts]
-statement-file-import-service = 'transaction_services.statement_file_processing.statement_file_processors:main'
+personal-finance-statement-file-import = 'transaction_services.statement_file_processing.statement_file_processors:main'
 
 
 [tool.rye.scripts]
-finance-dashboard = ["streamlit", "run", "transaction_services/ui/finance_dashboard.py"]
+personal-finance-dashboard = ["streamlit", "run", "transaction_services/ui/finance_dashboard.py"]
